# WalshPulseSeq

./: .gitignore  .readthedocs.yaml  CITATION.cff  QuTip Assignment-InternshipUGA.ipynb  QuTip Assignment-InternshipUGA.py  README.md  pyproject.toml  requirements.txt  requirements_conda.txt  setup.py
.github/workflows/: deploy.yml  python-app.yml
.ipynb_checkpoints/: pyproject-checkpoint.toml  requirements_for_pip-checkpoint.txt  setup-checkpoint.py
Initial Codes/: Code for Section-2_Using Numpy and Scipy.ipynb  DoubleAvgRotError.ipynb  QuTip Assignment-InternshipUGA.ipynb  QuTip Assignment-InternshipUGA.py  Section_3_Final-2-Copy1.ipynb  Section_3_Final-2.ipynb  Section_3_Final.ipynb
Initial Codes/.ipynb_checkpoints/: DoubleAvgRotError-checkpoint.ipynb  QuTip Assignment-InternshipUGA-checkpoint.ipynb  Section3_FPS_And_RotAngleErr-checkpoint.ipynb  Section_3_Final-2-Copy1-checkpoint.ipynb  Section_3_Final-2-checkpoint.ipynb  Section_3_Final-checkpoint.ipynb
Initial Codes/Primordial_Codes/: QuTip Assignment-InternshipUGA.ipynb
Initial Codes/Section_3/: DoubleAvgRotError.ipynb  Section_3_Final-2-Copy1.ipynb
Initial_Codes/.ipynb_checkpoints/: Section_3_Final-checkpoint.ipynb
Initial_Codes/Primordial_Codes/: QuTip Assignment-InternshipUGA1.ipynb
Initial_Codes/Quantum_Simulations/: Expectation_ValsCorrelation_FromEvolvedState-Copy1.ipynb  Untitled.ipynb
Initial_Codes/Section_3/: Section_3_Final.ipynb
Quantum_Simulations/: Expectation_ValsCorrelation_FromEvolvedState.ipynb
Section-2 Codes/: Module_WalshPSeq.py  Part A.ipynb  Part_2A.py  TestingFile.py  Testing_SS+S_NN-InteractionsType  Testing_SS+S_NN-InteractionsType.ipynb  Testing_WalshPSeq_XX+YY_LongRangeInteractionsType.ipynb  Testing_XX+YY.ipynb
Section_2/: InitialFunctions.py  Part_2A.py
Section_2/.ipynb_checkpoints/: Testing_SS+S_NN-InteractionsType-checkpoint.ipynb
Tutorial Notebooks/: SS+S_NN.ipynb  Testing2_RotAngleErrorsDoubleAveraging.py  TestingFile.py  Testing_SS+S_NN-InteractionsType.ipynb  Type-1 Nearest Neighbor Interactions and External Fields.ipynb  WalshPSeq_XX+YY_LongRangeInteractions.ipynb
Tutorial Notebooks/.ipynb_checkpoints/: SS+S_NN-checkpoint.ipynb  Testing_SS+S_NN-InteractionsType-checkpoint.ipynb  Testing_WalshPSeq_XX+YY_LongRangeInteractionsType-checkpoint.ipynb  WalshPSeq_XX+YY_LongRangeInteractions-checkpoint.ipynb
Tutorial Notebooks/Testing_Files/: SS+S_NN.ipynb  TestingFile.py  WalshPSeq_XX+YY_LongRangeInteractions.ipynb
Tutorial Notebooks/Testing_Files/.ipynb_checkpoints/: SS+S_NN-checkpoint.ipynb  WalshPSeq_XX+YY_LongRangeInteractions-checkpoint.ipynb
WPSProtocol.egg-info/: PKG-INFO  SOURCES.txt
WalshPulseSeq.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
docs/: Doxygen  conf.py  index.md  requirements.txt
docs/.ipynb_checkpoints/: requirements-checkpoint.txt
docs/source/: conf.py  index.rst  tutorial.rst
docs/source/.ipynb_checkpoints/: conf-checkpoint.py  index-checkpoint.rst
docs/source/tutorial/: Type-2 Long Range Interactions.ipynb
docs/source/tutorial/.ipynb_checkpoints/: Type-2 Long Range Interactions-checkpoint.ipynb
src/Section_2/.ipynb_checkpoints/: Part_2A-checkpoint.py
src/WPSProtocol/: InitialFunctions.py  Part_2A.py  TestingFile.py
src/WPSProtocol.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/WPSProtocol/.ipynb_checkpoints/: InitialFunctions-checkpoint.py  Module_RotationAngleErrorsDoubleAveraging-checkpoint.py  Module_WalshPSeq-checkpoint.py  Part_2A-checkpoint.py
src/docs/: modules.rst
