[build-system]
requires = ["setuptools==69.5.1", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools.dynamic]
dependencies = {file = ["requirements_for_pip.txt"]}

[tool.setuptools-git-versioning]
enabled = true

[tool.setuptools_scm]
version_scheme = "post-release"
local_scheme = "no-local-version"

[project]
name = "WPSProtocol"
readme = "README.md"
dynamic = ["dependencies", "version"]

# version = "0.1.1"
requires-python = "==3.8.19"
authors = [
  { name="Jessica John Britto", email="jessicajohnbritto@kgpian.iitkgp.ac.in" },
]
description = "A package for Implementing Walsh Pulse Sequenece constructed out of XY Hamiltonian based on Votto, M., Zeiher, J., & Vermersch, B. (2023). Robust universal quantum processors in spin systems via Walsh pulse sequences. arXiv preprint arXiv:2311.10600."
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
# dependencies = [
#     'numpy==1.24.3',
#     'matplotlib==3.2.2',
#     'scipy==1.10.1',
# ]

[project.urls]
Homepage = "https://github.com/JessicaJohnBritto/WalshPulseSeq/tree/main"
Issues = "https://github.com/JessicaJohnBritto/WalshPulseSeq/issues"